- Fixed a bug where the viewmodel wouldn't hide when zooming in on high FOVs.

Misc. Changes:
- Moved the gamemode-related options to near the basic server settings.
- Set the default FOV to 90.
- Added more bot names.
- Added a custom spray made by spoon (https://twitter.com/Sugarfrogg_)!
- Bound "t" to the spray key by default.
- Fixed the texture for spray_canned.

Release 1.0 (Released 4-11-21):
Mane changes:
- The Railgun now recharges in the background. You will know when it's ready after a beep plays.
	- The Railgun will charge faster than normal if the Railgun is charging in the background. This does not apply if the Railgun is overcharged.
- It is now much easier to aim with the Railgun. The crosshair is now enabled and the beam points towards the crosshair.
- Moved the positioning of the Railgun in dm_aerowalk.
- Moved the positioning of the Gatling Gun in dm_runoff.

Bug Fixes:
- Fixed a bug where the Railgun doesn't play a sound at 100% completion.
- Fixed a bug where unlocalized text in the Customization menu becomes jarbled.

Balance Tweaks:
- Decreased the Railgun's normal charge time by up to 31%.
- Decreased the Railgun's overcharge charge time by up to 33%.
- The Railgun now fires invisible bullets, allowing for better support with map triggers.

Misc. Changes:
- Changed the bot name randomization algorithm to be more unique.

Beta 2 (Released 03-07-21):
Mane changes:
- Added an additional boost when rocket/grenade jumping.
- Added proper bindings for the Gatling Gun and the Railgun.
- Added a timer for games with a time limit.
- Enabled most server movement variables. The server host can change most of these in the server settings.
- Increased sv_airaccelerate from 10 to 150. This allows for easier air control when bunnyhopping.
- Added a randomizer mode!