@@ -41,6 +41,12 @@ VERSION 1.0
 
 DESCRIPTION SERVER_OPTIONS
 {
+	"category1"
+	{
+		"#PoneDM_ServerOptions"
+		{ CATEGORY }
+	}
+
 	"hostname"
 	{
 		"#Valve_Hostname"
@@ -60,6 +66,33 @@ DESCRIPTION SERVER_OPTIONS
 		"#Valve_Max_Players"
 		{ NUMBER 1 32 }
 		{ "32" }
+	}
+	
+	"sv_ponedm_updatecolors"
+	{
+		"#PoneDM_Dynamic_Colors"
+		{ BOOL }
+		{ "1" }
+	}
+	
+	"sv_ponedm_updateappearance"
+	{
+		"#PoneDM_Dynamic_Appearance"
+		{ BOOL }
+		{ "1" }
+	}
+	
+	"mp_teamplay"
+	{
+		"#Valve_Teamplay"
+		{ BOOL }
+		{ "0" }
+	}
+	
+	"category3"
+	{
+		"#PoneDM_Gamemodes"
+		{ CATEGORY }
 	}
 	
 	"sv_ponedm_randomizer"
@@ -82,26 +115,11 @@ DESCRIPTION SERVER_OPTIONS
 		{ BOOL }
 		{ "0" }
 	}
-
-	"mp_timelimit"
+	
+	"category4"
 	{
-		"#Valve_Time_Limit"
-		{ NUMBER 0 -1 }
-		{ "0" }
-	}
-
-	"mp_fraglimit"
-	{
-		"#Valve_Frag_Limit"
-		{ NUMBER 0 -1 }
-		{ "0" }
-	}
-
-	"mp_teamplay"
-	{
-		"#Valve_Teamplay"
-		{ BOOL }
-		{ "0" }
+		"#PoneDM_BotSettings"
+		{ CATEGORY }
 	}
 	
 	"sv_ponedm_bot_fillserver"
@@ -138,18 +156,24 @@ DESCRIPTION SERVER_OPTIONS
 		{ "1" }
 	}
 	
-	"sv_ponedm_updatecolors"
+	"category5"
 	{
-		"#PoneDM_Dynamic_Colors"
-		{ BOOL }
-		{ "1" }
+		"#PoneDM_GameplaySettings"
+		{ CATEGORY }
 	}
 	
-	"sv_ponedm_updateappearance"
+	"mp_timelimit"
 	{
-		"#PoneDM_Dynamic_Appearance"
-		{ BOOL }
-		{ "1" }
+		"#Valve_Time_Limit"
+		{ NUMBER 0 -1 }
+		{ "0" }
+	}
+
+	"mp_fraglimit"
+	{
+		"#Valve_Frag_Limit"
+		{ NUMBER 0 -1 }
+		{ "0" }
 	}
 
 	"mp_weaponstay"
