@@ -23,6 +23,7 @@ Misc. Changes:
 - Added a custom spray made by spoon (https://twitter.com/Sugarfrogg_)!
 - Bound "t" to the spray key by default.
 - Fixed the texture for spray_canned.
+- Changed the pony color for the Blue team when Teamplay mode is enabled.
 
 Release 1.0 (Released 4-11-21):
 Mane changes:
